--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./src/index.css">
-  <title>Vite + React</title>
+  <title>Vapo product</title>
 </head>
 
 <body class="bg-[url('/bg.jpg')] bg-cover bg-center bg-no-repeat h-screen overflow-hidden">
